https://jazzteamstore.com/ links to contact and blog on index page.

--- a/less/index.less
+++ b/less/index.less
@@ -1,12 +1,18 @@
+body {
+  margin: 0 auto;
+  color: darkgreen
+}
+
+a {
+  text-decoration: none;
+}
+
+h5, h6, p {
+  color: darkgreen;
+}
+
 .clear {
   clear: both; }
-
-nav {
-  float: left;
-  color: #FF0000;
-  font-family: Helvetica, sans-serif; }
-  nav ul li ul.sub-nav {
-    display: none; }
 
 .box {
   width: 200px;
@@ -17,5 +23,147 @@ nav {
   width: 200px;
   height: 200px;
   background: gray; }
+
+.fa {
+  padding: 0.7%;
+  width: 20px;
+  text-align: center;
+  text-decoration: none;
+  color: lightgreen;
+}
+
+.banner {
+  background-color: white;
+  color: darkgreen;
+  font-size: 0.85rem;
+  margin: 0.6%;
+
+  p {
+    display: inline;
+  }
+
+  a {
+    color: darkgreen;
+    text-decoration: none;
+    margin: 0.6%;
+  }
+
+  a:hover {
+    color: lightgreen;
+  }
+
+}
+
+.section1 {
+  margin: 1.5% 0;
+  max-width: 600px;
+}
+
+.hours-banner {
+  color: white;
+  background-color: darkgreen;
+  font-size: 0.7rem;
+  padding: 0.5% 0;
+}
+
+.heading-section {
+  margin-bottom: 2%;
+}
+
+.navbar {
+  margin-bottom: 25px;
+}
+
+.products-heading {
+  margin: 15px 0;
+  color: darkgreen;
+
+  h2 {
+    position: relative;
+  }
+
+  h2 span {
+      background-color: white;
+      padding: 0 10px;
+  }
+
+  h2:after {
+      content:"";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 0.5em;
+      border-top: 2px solid lightgreen;
+      z-index: -1;
+  }
+
+}
+
+.small-text {
+  p {
+    font-size: 0.75rem;
+
+    a {
+      text-decoration: none;
+      color: darkgreen;
+    }
+
+    a:hover {
+      color: lightgreen;
+    }
+  }
+
+  .btn {
+    font-size: 0.75rem;
+  }
+}
+
+.line {
+  border-top: 2px solid lightgreen;
+  margin: 25px 0;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.links {
+
+  p {
+    margin:0;
+  }
+
+  a {
+    text-decoration: none;
+    color: darkgreen;
+  }
+
+  a:hover {
+    color: lightgreen;
+  }
+  
+}
+
+.form-control {
+  font-size: 0.75rem;
+}
+
+.gap {
+  margin: 25px 0;
+}
+
+.form-control {
+  color: darkgreen;
+}
+
+
+
+
+
+
+
+
+
 
 /*# sourceMappingURL=main.css.map */
